syntax = "proto3";

package test_v1;

option go_package = ".;test_v1";

service EchoServer {
    rpc Echo(EchoRequest) returns(EchoReply) {}
}

message EchoRequest {
    string message = 1;
}

message EchoReply {
    string message = 1;
    int64 unixtime = 2;
}